<resources>
    <string name="app_name">MqttPro</string>
    <string name="temp_text">温度：</string>
    <string name="hum_text">湿度：</string>
    <string name="temp_val">36.5 ℃</string>
    <string name="upte">温度上限:</string>
    <string name="lowte">温度下限:</string>
    <string name="Hum">50.6 H</string>
    <string name="upHum">湿度上限:</string>
    <string name="lowHum">湿度下限:</string>
    <string name="top_up">请输入上限值</string>
    <string name="top_low">请输入下限值</string>
    <string name="submit_top_1">上传</string>
    <string name="top_turn">灯已打开</string>
    <string name="userregister">用户注册页面</string>
    <string name="login1">登录</string>
    <string name="qhmu1">青海民族大学</string>
    <string name="qhmu2">物理与电子信息工程学院</string>
    <string name="qhmu3">2019级电子信息科学与技术</string>
    <string name="username1">账号:</string>
    <string name="username2">请输入用户名</string>
    <string name="passwordu1">密码:</string>
    <string name="passwordu2">请输入用户密码</string>
    <string name="register1">注册</string>
    <string name="welecomName">欢迎赵展文登录</string>

    <string-array name="cities">
        <item>北京</item>
        <item>天津</item>
        <item>哈尔滨</item>
        <item>沈阳</item>
        <item>石家</item>
        <item>兰州</item>
        <item>西安</item>
        <item>郑州</item>
        <item>太原</item>
        <item>长沙</item>
        <item>南京</item>
        <item>贵阳</item>
        <item>杭州</item>
        <item>广州</item>
        <item>台北</item>
        <item>上海 </item>
        <item>重庆</item>
        <item>长春</item>
        <item>呼和浩特</item>
        <item>乌鲁木齐</item>
        <item>西宁</item>
        <item>银川</item>
        <item>济南</item>
        <item>合肥</item>
        <item>武汉</item>
        <item>成都</item>
        <item>拉萨</item>
        <item>昆明</item>
        <item>南昌</item>
        <item>福州</item>
        <item>海口</item>
        <item>澳门</item>
    </string-array>

</resources>