<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFCCCC"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/leftback"
                android:onClick="returnActivity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="returnActivity"
                android:text="返回" />

            <TextView
                android:id="@+id/tv_Student_Name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="90dp"
                android:text="@string/welecomName" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/iv_comein1"
                    android:onClick="comeInChart"
                    android:text="监测"
                    tools:ignore="OnClick" />

                <ImageView
                    android:id="@+id/iv_comein1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/rightback"
                    android:onClick="comeInChart"
                    tools:ignore="OnClick" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#99CCFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_ciTy"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/black"
                    android:dropDownVerticalOffset="48dp"
                    android:entries="@array/cities"
                    android:overlapAnchor="false" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="30dp"
                    android:text="2022-01-13  星期四"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/xianxing1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_weather"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:src="@drawable/biz_plugin_weather_qing" />

                    <TextView
                        android:id="@+id/tv_tem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="31℃"
                        android:textColor="@color/white"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tv_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="晴天"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tem_low_high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25℃~33℃"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/xianxing1"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_air"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="空气：53 良\n空气好，适宜外出"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_win"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="南风3-4级"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
                <!--android:text="IP地址\n118.182.10.2\nIPV4地址\n192.168.000.105\n省份:甘肃\n城市:陇南\n运营商:中国电信"-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:id="@+id/tv_ipaddress"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=" "
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="室内环境监测"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/wendu" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temp_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temp_val"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shidu1" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hum_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_hum"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Hum"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="#CCCCFF"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/upte"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/temp_up"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/top_up"
                        android:numeric="integer"
                        android:textSize="13sp"
                        tools:ignore="Deprecated" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/lowte"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/temp_low"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/top_low"
                        android:numeric="integer"
                        android:textSize="13sp"
                        tools:ignore="Deprecated" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="#CCCCFF"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/upHum"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/hum_up"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/top_up"
                        android:numeric="integer"
                        android:textSize="13sp"
                        tools:ignore="Deprecated" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/lowHum"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/hum_low"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/top_low"
                        android:numeric="integer"
                        android:textSize="13sp"
                        tools:ignore="Deprecated" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/led_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/off_led"/>

                <ImageView
                    android:id="@+id/alarm_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/offalarm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bt_Info_Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/purple_200"
                    android:onClick="mqttConnectButton"
                    android:text="连接" />

                <Button
                    android:id="@+id/val_pub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#CCFF99"
                    android:text="@string/submit_top_1"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>