<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF99CC"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/goback"
                android:onClick="returnLoginIngActivity"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="returnLoginIngActivity"
                android:text="@string/login1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userregister"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="学      号  :"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/et_stuid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入学号"
                        android:inputType="number"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText,SpUsage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="姓      名  :"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入姓名"
                        android:inputType="text"
                        android:id="@+id/et_stuname"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用  户  名:"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入用户名"
                        android:id="@+id/et_username1"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText,TextFields" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="密      码  :"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入密码"
                        android:inputType="textPassword"
                        android:id="@+id/et_password1"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="确认密码:"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请再次输入密码"
                        android:id="@+id/et_password2"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="邮      箱  :"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入邮箱，例如:1363035157@qq.com"
                        android:id="@+id/et_email"
                        android:textSize="15sp"
                        tools:ignore="Autofill,HardcodedText,TextFields" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:id="@+id/bt_registered"
                        android:background="#9999FF"
                        android:text="@string/register1" />
                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_user_count"
                android:textSize="30sp"
                android:layout_height="50dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>